[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teibo"
version = "0.2.0"
description = "堤防の円弧すべり安定性照査ツール（分割法：修正フェレニウス法／簡易ビショップ法）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
teibo = "teibo.cli:main"

[tool.setuptools]
packages = ["teibo"]
